--- a/WebContent/c01_jquery/a02_event/a08_select.html
+++ b/WebContent/c01_jquery/a02_event/a08_select.html
@@ -21,6 +21,20 @@
 		});
 		$("#sel").change(function(){
 			var num01 = $('#num01').val();
+			/*
+			<select>
+				<option>사과</option>
+				<option>바나나</optioin>
+				<option>딸기</option>
+				==> option:selected").text()와 $('select').val()
+				과 동일하다.
+			<select>
+				<option value="c001">사과</option>
+				<option value="c002">바나나</optioin>
+				<option value="c003">딸기</option>
+				==> option:select.text()와
+				$('select').val() 다른 값을 가지고 있다.
+			*/
 			var sel = $('#sel>option:selected').text();
 			var num02 = $('#num02').val();
 			var tot = eval(num01+sel+num02);
